--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="multipurpose, portfolio, blog, shop, e-commerce, modern, flat style, responsive,  business, corporate, mobile, bootstrap 4, html5, css3, jquery, js, gallery, slider, touch, creative, clean">
     <meta name="author" content="Ticcix">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="https://i.imgur.com/2UKZo8V.png">
+    <link rel="icon" type="image/png" href="https://i.imgur.com/JNmPlT9.png">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 
 </head>
@@ -16,7 +16,7 @@
   <nav class="menu" tabindex="0">
   <div class="smartphone-menu-trigger"></div>
   <header class="avatar">
-    <img src="https://i.imgur.com/2UKZo8V.png" />
+    <img src="https://i.imgur.com/JNmPlT9.png" />
   </header>
   <ul>
     <a href="https://github.com/Ticcix/"><li tabindex="0" class="icon-github"><span>GitHub</span></li></a>
